...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <Spinner
            android:id="@+id/spinnerRestaurant"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTitle"
...
